some bug fixes with dark/light mode flickering + couple of animations

--- a/src/scss/sections/_main.scss
+++ b/src/scss/sections/_main.scss
@@ -1,5 +1,6 @@
 .main {
     padding: 68px 20px 90px 20px;
+    overflow: hidden;
 
     &__container {
         display: grid;
@@ -12,6 +13,23 @@
 
     &__content {
         max-width: 100%;
+        position: relative;
+        left: -1000px;
+        opacity: 0;
+    }
+
+    &__emoji-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
+
+    &__emoji {
+        width: 80%;
+        position: relative;
+        right: -1000px;
     }
 
     &__title {
